# pengAIM-Agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  aegra.json  alembic.ini  auth.py  celerybeat-schedule.db  codecov.yml  docker-compose.dev.yml  docker-compose.yml  prompts.py  pyproject.toml  pytest.ini  run_server.py  state.py
libs/aegra-api/: README.md  alembic.ini  pyproject.toml
libs/aegra-api/alembic/: env.py
libs/aegra-api/alembic/versions/: 20250817172544_initial_schema.py  20250831174511_add_cascade_delete_for_runs_thread_fkey.py  20251108232438_drop_idx_assistant_user_graph_config_.py  20251110142524_add_soft_delete_fields.py  20251113131221_rename_tools_agent_to_re_act.py  20251113170230_add_team_id.py  20251121162149_add_thread_assistant_id_and_is_shared.py  20251224135600_add_assistant_type_field.py  20260106053743_add_deleted_at_columnt_to_threads.py  20260210090721_add_enabled_field_to_assistant.py  20260309000000_add_control_plane_tables.py  20260309100000_add_run_metrics_columns.py  20260309100001_migrate_run_status_to_langgraph_.py  20260318155316_add_workflows_and_workflow_runs_tables.py  20260325104731_add_workflow_schedules_table.py  20260326120000_add_webhook_trigger_columns.py  20260327100000_add_workflow_versions_table.py  20260408033412_drop_run_events_table.py  20260408033530_add_execution_params_and_lease_columns_.py
libs/aegra-api/src/aegra_api/: __init__.py  celery_app.py  config.py  constants.py  llm_models.py  main.py  settings.py  tasks.py
libs/aegra-api/src/aegra_api/api/: assistants.py  control_plane.py  runs.py  stateless_runs.py  store.py  threads.py  webhooks.py  workflow_models.py  workflow_node_preview.py  workflow_runs.py  workflow_schedules.py  workflows.py
libs/aegra-api/src/aegra_api/core/: active_runs.py  app_loader.py  auth_ctx.py  auth_deps.py  auth_handlers.py  auth_middleware.py  database.py  health.py  migrations.py  orm.py  redis_manager.py  route_merger.py  sse.py  tenant.py
libs/aegra-api/src/aegra_api/middleware/: __init__.py  content_type_fix.py  logger_middleware.py
libs/aegra-api/src/aegra_api/models/: __init__.py  assistants.py  auth.py  enums.py  errors.py  run_job.py  runs.py  store.py  threads.py
libs/aegra-api/src/aegra_api/observability/: base.py  otel.py  setup.py  span_enrichment.py
libs/aegra-api/src/aegra_api/services/: assistant_service.py  base_broker.py  base_executor.py  broker.py  event_converter.py  event_store.py  executor.py  graph_factory.py  graph_streaming.py  heartbeat_service.py  internal_auth.py  langgraph_service.py  lease_reaper.py  local_executor.py  redis_broker.py  run_executor.py  run_preparation.py  run_status.py  run_waiters.py  streaming_service.py  thread_state_service.py  webhook_security.py  worker_executor.py  worker_queue.py
libs/aegra-api/src/aegra_api/utils/: __init__.py  assistants.py  config_merge.py  run_utils.py  setup_logging.py  sse_utils.py  status_compat.py  tokens.py
libs/aegra-api/tests/: README.md  conftest.py
libs/aegra-api/tests/e2e/: _utils.py  conftest.py
libs/aegra-api/tests/e2e/manual_auth_tests/: README.md  __init__.py  conftest.py  test_auth_e2e.py  test_authorization_handlers_e2e.py
libs/aegra-api/tests/e2e/multi_instance/: test_multi_instance.py  test_stress.py
libs/aegra-api/tests/e2e/test_assistants/: test_assistant_graph.py  test_assistant_search.py  test_assistant_version.py
libs/aegra-api/tests/e2e/test_custom_routes/: __init__.py  test_custom_routes_e2e.py
libs/aegra-api/tests/e2e/test_factories/: test_factory_graphs.py
libs/aegra-api/tests/e2e/test_human_in_loop/: test_human_in_loop.py
libs/aegra-api/tests/e2e/test_runs/: test_background_run_join.py  test_cancel_run_e2e.py  test_context_not_in_checkpoints.py  test_heartbeat_keepalive_e2e.py  test_run_join_output.py  test_runs.py  test_stateless_runs.py  test_worker_e2e.py
libs/aegra-api/tests/e2e/test_store/: test_store.py
libs/aegra-api/tests/e2e/test_streaming/: test_chat_streaming.py  test_events_mode.py  test_streaming_error_e2e.py
libs/aegra-api/tests/e2e/test_threads/: test_get_state_endpoint.py  test_history_endpoint.py  test_state_endpoint.py  test_thread_deletion.py  test_update_state_endpoint.py
libs/aegra-api/tests/fixtures/: __init__.py  clients.py  custom_routes_with_auth.py  langgraph.py  mock_jwt_auth.py  permissions.py  session_fixtures.py  test_helpers.py
libs/aegra-api/tests/integration/: test_auth_flow.py  test_auth_handlers_integration.py  test_cancel_run.py  test_custom_routes.py  test_streaming_errors.py
libs/aegra-api/tests/integration/test_api/: test_assistants_crud.py  test_runs_crud.py  test_stateless_runs_crud.py  test_store_crud.py  test_threads_crud.py  test_threads_history.py
libs/aegra-api/tests/integration/test_api_permissions/: test_assistants.py  test_control_plane.py  test_runs.py  test_threads.py  test_workflow_node_preview.py  test_workflow_runs.py  test_workflow_schedules.py  test_workflows.py
libs/aegra-api/tests/integration/test_services/: test_assistant_service_db.py  test_event_store_integration.py  test_graph_factory_integration.py  test_langgraph_service_integration.py  test_streaming_hitl.py
libs/aegra-api/tests/unit/: conftest.py  test_cors_config.py  test_main.py  test_migrations.py  test_settings.py
libs/aegra-api/tests/unit/test_api/: test_heartbeat_keepalive.py  test_runs.py  test_runs_streaming.py  test_runs_thread_name.py  test_runs_wait.py  test_stateless_runs.py  test_store_namespace_scoping.py  test_thread_status.py
libs/aegra-api/tests/unit/test_core/: test_app_loader.py  test_auth_ctx.py  test_auth_deps.py  test_auth_handlers.py  test_auth_middleware.py  test_config.py  test_database_manager.py  test_redis_manager.py  test_route_merger.py  test_sse.py
libs/aegra-cli/: README.md  pyproject.toml
libs/aegra-cli/src/aegra_cli/: __init__.py  cli.py  env.py
libs/aegra-cli/src/aegra_cli/commands/: __init__.py  (+2 more)
libs/aegra-cli/tests/: __init__.py  conftest.py  test_cli.py  test_docker_utils.py  test_init.py
(+298 files in other folders)
