[project]
name = "aegra-api"
version = "0.9.2"
description = "Aegra core API - Self-hosted Agent Protocol server"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Muhammad Ibrahim", email = "mibrahim37612@gmail.com" }]
keywords = ["langgraph", "agents", "llm", "fastapi", "agent-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "gunicorn==25.3.0",
    "fastapi>=0.110.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",

    # LangGraph
    "langgraph>=1.0.3",
    "langgraph-sdk>=0.3.5",
    "langgraph-checkpoint-postgres>=2.0.23",

    # Database
    "sqlalchemy>=2.0.0",
    "greenlet>=3.1.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.9",
    "alembic>=1.16.4",
    "celery>=5.4.0",

    # Observability (OpenTelemetry)
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "openinference-instrumentation-langchain>=0.1.58",

    # Sentry
    "sentry-sdk[fastapi]==2.57.0",

    # Utils
    "structlog>=25.4.0",
    "asgi-correlation-id>=4.3.4",
    "python-jose[cryptography]>=3.3.0",
    "firecrawl>=4.6.0",
    "tavily-python>=0.5.0",
    "croniter>=3.0.0",

    # Redis (optional broker backend for multi-instance streaming)
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ibbybuilds/aegra"
Documentation = "https://github.com/ibbybuilds/aegra#readme"
Repository = "https://github.com/ibbybuilds/aegra"
Issues = "https://github.com/ibbybuilds/aegra/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegra_api"]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "aegra_api/alembic.ini"
"alembic" = "aegra_api/alembic"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG005", # Unused lambda argument
    "SIM108", # Use ternary operator (less readable in many cases)
]

[tool.ruff.lint.isort]
known-first-party = ["aegra_api", "aegra_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "e2e: end-to-end tests requiring a running server",
    "prod_only: tests that require Redis workers (skipped in dev mode)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.0",
    "ty>=0.0.17,<0.1.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.1",
    "langchain-openai>=1.0.3",
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
]
